--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "muse-ui": "^3.0.2",
+    "qs": "^6.8.0",
+    "querystring": "^0.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
